--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8081
+spring.datasource.url=jdbc:derby:directory:transactionsDB;create=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
+
 
