Entity and Reposotiry added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8081
-spring.datasource.url=jdbc:derby:directory:transactionsDB;create=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
-
+server.port=8082
+spring.datasource.url=jdbc:h2:file:/db/testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
