--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,8 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -83,6 +85,21 @@
 			<plugin>
 				<groupId>org.sonatype.ossindex.maven</groupId>
 				<artifactId>ossindex-maven-plugin</artifactId>
+				<version>3.2.0</version>
+				<executions>
+					<execution>
+						<id>audit-dependencies</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>audit</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<reportFile>
+						target/audit-report.json
+					</reportFile>
+				</configuration>
 			</plugin>
 		</plugins>
 
