added oss plugin

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.1.0</version>
 				<configuration>
 					<excludes>
 						<exclude>
@@ -97,8 +98,13 @@
 				</executions>
 				<configuration>
 					<reportFile>
-						target/audit-report.json
+						/target/audit-report.json
 					</reportFile>
+					<excludeVulnerabilityIds>
+						<exclude>CVE-2018-14335</exclude>
+						<exclude>CVE-2022-45868</exclude>
+						<exclude>CVE-2022-1471</exclude>
+					</excludeVulnerabilityIds>
 				</configuration>
 			</plugin>
 		</plugins>
