--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
 				</configuration>
 			</plugin>
 			<plugin>
+			<groupId>org.owasp</groupId>
+			<artifactId>dependency-check-maven</artifactId>
+			<version>${plugin.dependency-check.version}</version>
+			</plugin>
+			<plugin>
 				<groupId>org.sonatype.ossindex.maven</groupId>
 				<artifactId>ossindex-maven-plugin</artifactId>
 				<version>3.2.0</version>
@@ -101,9 +106,12 @@
 						/target/audit-report.json
 					</reportFile>
 					<excludeVulnerabilityIds>
-						<!-- Effective resolution: Inapplicable issue Argumentation: h2 is 
-							used for test purposes not intend to use in production env. Evaluated by 
-							- Evaluation date -->
+						<!-- Effective resolution: Inapplicable issue 
+						Argumentation: h2 is 
+							used for test purposes not intend to use in production env. 
+							Evaluated by 
+							Evaluation date 
+							-->
 						<exclude>CVE-2018-14335</exclude>
 						<exclude>CVE-2022-45868</exclude>
 						<exclude>CVE-2022-1471</exclude>
