--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,10 @@
 				<groupId>org.owasp</groupId>
 				<artifactId>dependency-check-maven</artifactId>
 				<version>${plugin.dependency-check.version}</version>
+				<configuration>
+				<skipProvidedScope>true</skipProvidedScope>
+				<skipTestScope>true</skipTestScope>
+				</configuration>
 				<executions>
 				<execution>
 				<goals>
