--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+#h2 database
 spring.datasource.url=jdbc:h2:file:./db/testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -6,3 +7,9 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
+#swagger
+springdoc.swagger-ui.enabled = true
+springdoc.swagger-ui.path = /swagger-ui.html
+springdoc.swagger-ui.tryItOutEnabled = false
+springdoc.swagger-ui.filter = false
+springdoc.swagger-ui.syntaxHighlight.activated = true
